<resources>
    <!--<string name="app_name">TMPStock</string>-->
    <string name="tmps_sign_in">Sign In</string>
    <string name="tmps_sign_up">Sign Up</string>
    <string name="tmps_username">Email Id / Mobile no.</string>
    <string name="tmps_password">Password</string>
    <string name="tmps_forgot_password">Forgot Password?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_search">Search</string>
</resources>
