<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tripper_me_product_stock"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    style="@style/ActivityTheme"
    tools:context="com.tripperme.tmpstock.TripperMeProductStockSplashScreenActivity">

    <TextView
        android:id="@+id/tmps_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/font_30"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/size_10">

        <EditText
            android:id="@+id/tmps_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawingCacheQuality="auto"
            android:ems="10"
            android:gravity="center_vertical|center"
            android:hint="@string/tmps_username"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryText"
            android:theme="@style/EditTextTheme" />

        <EditText
            android:id="@+id/tmps_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tmps_user_name"
            android:layout_margin="@dimen/size_10"
            android:drawingCacheQuality="auto"
            android:ems="10"
            android:gravity="center_vertical|center"
            android:hint="@string/tmps_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="normal"
            android:theme="@style/EditTextTheme" />

        <Button
            android:id="@+id/tmps_sign_in"
            style="@style/ButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tmps_password"
            android:clickable="true"
            android:elevation="@dimen/size_10"
            android:text="@string/tmps_sign_in"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tmps_forget_password"
            style="@style/TextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tmps_password"
            android:clickable="true"
            android:padding="@dimen/size_10"
            android:text="@string/tmps_forgot_password" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <!-- <view
             android:id="@+id/vertical_divider"
             class="android.support.v4.widget.Space"
             android:layout_width="@dimen/divider_space"
             android:layout_height="match_parent" />-->

        <Button
            android:id="@+id/tmps_sign_up"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="@dimen/size_10"
            android:text="@string/tmps_sign_up"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</RelativeLayout>
